<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/numText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/numText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numTextInitial"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/turnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turnTextInitial"
        android:textSize="25sp"
        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toTopOf="@id/numText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/two"
        android:tag="2"
        android:onClick="changeNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twoText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numText" />
    <Button
        android:id="@+id/one"
        android:tag="1"
        android:onClick="changeNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/two"
        app:layout_constraintTop_toBottomOf="@id/numText" />
    <Button
        android:id="@+id/three"
        android:tag="3"
        android:onClick="changeNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threeText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/two"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numText" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:onClick="resetGame"
        android:text="@string/resetButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/load"
        android:onClick="loadGame"
        android:text="Load Game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="Save Game"
        android:onClick="saveGame"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/load"/>

</androidx.constraintlayout.widget.ConstraintLayout>